cmake_minimum_required ( VERSION 3.0 )

project ( myemath )

add_library ( myemath AABB.h AABB.inl BoundingVolumes.h BoundingVolumes.inl Declarations.h Frustum.h Frustum.inl Functions.h Geometry.h GeometryDeclarations.h Intersection.h Intersection.inl Math.h Matrix.h Matrix.inl Matrix3.h Matrix3.inl Matrix4.h Matrix4.inl MatrixOperations.h MatrixOperations.inl Plane.h Plane.inl Projection.h Quaternion.h Quaternion.inl QuaternionOperations.h QuaternionOperations.inl Rational.h Rational.inl Ray.h Ray.inl Sphere.h Sphere.inl Swizzle.h SwizzleVector2.h SwizzleVector3.h SwizzleVector4.h Transform.h Transform.inl Triangle.h Triangle.inl Trigonometry.h Vector2.h Vector2.inl Vector3.h Vector3.inl Vector4.h Vector4.inl Volume.h )

