cmake_minimum_required ( VERSION 3.0 )

project ( myemath )

add_library ( myemath AABB.h AABB.inl BoundingVolumes.h BoundingVolumes.inl Constants.h Declarations.h Frustum.h Frustum.inl Functions.h FunctionsImpl.h Geometry.h GeometryDeclarations.h Intersection.h Intersection.inl Math.h Matrix.h Matrix.inl Matrix3.h Matrix3.inl Matrix3fSSE.h Matrix3fSSE.inl Matrix4.h Matrix4.inl Matrix4fSSE.h Matrix4fSSE.inl MatrixOperations.h MatrixOperations.inl Plane.h Plane.inl Projection.h Quaternion.h Quaternion.inl QuaternionOperations.h QuaternionOperations.inl Rational.h Rational.inl Ray.h Ray.inl Sphere.h Sphere.inl SSE.h SSE.inl Swizzle.h Transform.h Transform.inl Triangle.h Triangle.inl Trigonometry.h TrigonometryImpl.h Utils.h Vector2.h Vector2.inl Vector2fSSE.h Vector2fSSE.inl Vector3.h Vector3.inl Vector3fSSE.h Vector3fSSE.inl Vector4.h Vector4.inl Vector4fSSE.h Vector4fSSE.inl Volume.h ExplicitInstantiations.cpp )