cmake_minimum_required(VERSION 3.0)

project (myewin)

add_library ( myewin Button.cpp Button.h Checkbox.cpp Checkbox.h Control.cpp Control.h Edit.cpp Edit.h IDGenerator.cpp IDGenerator.h ListView.cpp ListView.h MouseKeyboardInput.cpp MouseKeyboardInput.h Tabs.cpp Tabs.h Toolbar.cpp Toolbar.h Utils.cpp Utils.h VirtualKeyMap.h Window.cpp Window.h WindowMenu.cpp WindowMenu.h WinGame.cpp WinGame.h WinKeyboard.cpp WinKeyboard.h WinMouse.cpp WinMouse.h )
